[project]
name = "seispy"
version = "0.1.0"
description = "SeisPy: seismic data processing."
authors = [
    { name = "Sonder Merak", email = "merak19981999@gmail.com" }
]
dependencies = [
    "icecream>=2.1.3",
    "marimo>=0.10.6",
    "tqdm>=4.67.1",
    "numpy<2.0",
    "obspy>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
halo = "rye run marimo run src/halo-seispy.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/seispy"]
