[project]
name = "seispy"
version = "0.1.0"
description = "SeisPy: seismic data processing."
readme = "README.md"
authors = [{ name = "Sonder Merak", email = "merak19981999@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "icecream>=2.1.3",
  "marimo>=0.10.7",
  "numpy<2.0",
  "obspy>=1.4.1",
  "rose",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
rose = { path = "packages/rose" }

[project.scripts]
seispy = "seispy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.workspace]
# members = ["packages/rose"]
